# alumni

./: .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD_TICKETS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_SETUP.md  DECISIONS.md  DESIGN_SYSTEM.md  INTEGRATIONS.md  MANIFEST.in  PROJECT_STATE.md  README.md  SPEC.md  THEMES.md  pyproject.toml
.claude/: project.md
.github/workflows/: ci.yml
alumni/: hooks.py  patches.txt
alumni/config/: docs.py
docs/upstream-issues/: buzz-toggle-test-mode.md
